--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="6thUZjskyEdPc1htDWz6rF9ZPMbOwFZvVj1DeO9CcbA" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/escudopunata.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
