provando react en index

--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta name="google-site-verification" content="6thUZjskyEdPc1htDWz6rF9ZPMbOwFZvVj1DeO9CcbA" />
   <meta charset="utf-8" />
-  <meta name="google-site-verification" content="6thUZjskyEdPc1htDWz6rF9ZPMbOwFZvVj1DeO9CcbA" />
   <link rel="icon" href="%PUBLIC_URL%/escudopunata.ico" />
   <meta name="theme-color" content="#000000" />
-  <meta property="og:title" content="GOBIERNO AUTONO MUNICIPAL DE PUNATA" />
-  <meta property="og:description" content="Satisfacer las necesidades y aspiraciones de desarrollo de la
-    población del municipio de Punata, direccionando los servicios
-    públicos municipales hacia la mejora de su calidad de vida" />
+  <meta property="og:title" content="Gobierno Autonomo municipal De Punata" />
+  <meta property="og:description" content="Satisfacer las necesidades y aspiraciones de desarrollo de la población del municipio de Punata, direccionando los servicios públicos municipales hacia la mejora de su calidad de vida" />
   <meta property="og:url" content="https://punata.vercel.app/" />
   <meta name="robots" content="index, follow" />
- 
   <link rel="canonical" href="https://punata.vercel.app/" />
-
-  <title>GOBIERNO AUTONO MUNICIPAL DE PUNATA</title>
+  <title>Gobierno Autonomo municipal De Punata</title>
 </head>
-
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
-
 </html>
